--- a/game.html
+++ b/game.html
@@ -23,7 +23,7 @@
 
 </head>
 <body>
-  <div class="container">
+  <div class="container" v-cloak>
 
     <!-- Header -->
     <div id="header" class="row">
