Change all paths to relative paths
Deplying on a subdirectory doesn't work. While absolutle paths are
better for SEO, this is not a concern at the moment and a simple fix
to the issue.

Also note that several paths on root pages were prefixed with `../`.
They did appear to work when running a dev server. By this I belive that
any `../` when you are already at the root of the domain resolves to
`./` which is why the issue passed silently.

--- a/game.html
+++ b/game.html
@@ -18,8 +18,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
   <!-- Load site css -->
-  <link rel="stylesheet" href="../css/main.css">
-  <link rel="stylesheet" href="../css/game.css">
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/game.css">
 
 </head>
 <body>
@@ -409,7 +409,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 <script src='https://unpkg.com/vue/dist/vue.js'></script>
-<script src="../js/game.js"></script>
+<script src="./js/game.js"></script>
 
 </body>
 </html>
