--- a/complete.html
+++ b/complete.html
@@ -18,8 +18,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
   <!-- Load site css -->
-  <link rel="stylesheet" href="../css/main.css">
-  <link rel="stylesheet" href="../css/complete.css">
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/complete.css">
 
 </head>
 <body>
@@ -44,7 +44,7 @@
       <div id="congratulations-body" class="col-xs-6">
         <div class="title">{{completeTitle}}</div>
         <div class="text">{{completeText}}</div>
-        <a href="/game.html">
+        <a href="./game.html">
           <button type="button" class="btn btn-lg btn-outline-inverse">
             {{playAgain}}
           </button>
@@ -80,7 +80,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <script src='https://unpkg.com/vue/dist/vue.js'></script>
-<script src="../js/complete.js"></script>
+<script src="./js/complete.js"></script>
 
 </body>
 </html>
