--- a/game.html
+++ b/game.html
@@ -25,6 +25,24 @@
 <body>
   <div class="container" v-cloak>
 
+    <!-- Header Controls -->
+    <div class="header-controls">
+      <div class="home-control">
+        <a href="./" target="_self">
+          <i class="fa fa-home" aria-hidden="true"></i>
+        </a>
+      </div>
+      <div class="loc-sel">
+        <template v-for="(loc, key) in locs">
+          <div
+            @click.stop="selectLoc"
+            :data-loc-sel="key"
+            v-html="loc.index.main.title">
+          </div>
+        </template>
+      </div>
+    </div>
+
     <!-- Header -->
     <div id="header" class="row">
       <div class="col-xs-12">
