--- a/lost.html
+++ b/lost.html
@@ -49,29 +49,7 @@
             {{playAgain}}
           </button>
         </a>
-        <a href="http://www.blackholehunter.org/" class="btn btn-lg btn-outline-inverse">{{home}}</a>
-      </div>
-    </div>
-
-    <!-- Learn -->
-    <div id="learn" class="row">
-      <div id="question" class="col-xs-4">
-        <i class="fa fa-question-circle"></i>
-      </div>
-      <div id="learn-body" class="col-xs-6">
-        <div class="title">{{learnTitle}}</div>
-        <div class="text" v-html="learnText"></div>
-      </div>
-    </div>
-
-    <!-- Do -->
-    <div id="do" class="row">
-      <div id="tick" class="col-xs-4">
-        <i class="fa fa-desktop"></i>
-      </div>
-      <div id="do-body" class="col-xs-6">
-        <div class="title">{{doTitle}}</div>
-        <div class="text" v-html="doText"></div>
+        <a href="./" class="btn btn-lg btn-outline-inverse">{{home}}</a>
       </div>
     </div>
 
