--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-
   <!-- Identification -->
   <title>Black Hole Hunter</title>
   <link rel="shortcut icon" href="./img/cardiff.ico" />
@@ -18,6 +17,18 @@
   <!-- Load site css -->
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/splash.css">
+
+  <!-- Google Analytics -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-72474772-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 
 </head>
 <body>
