Make game content fill window
Mostly this was correctly applying flexbox styles. One non-trivial issue
was make the `#game` div take the correct height (which in turn
determines the heights aquired by its decendant wavesurferes).

The issue was that the height of the `#game` `div` should resize based
on the other fixed hight *rows*. The carousel has to have its height
dynamically resized. The issue is that the `#game` `div` does not
respect the resized height, which either caused `#game` to overflow the
height of the viewport, or more bizzarly, just the fullsize wavesurfer
to be generated taller than its container, which almost completly
occludes the player controls.

This is a bug in the browser engine, as is reported on SE and else
where. The solution is to force a redraw, and this is done in
`game.coffeeL453`. For some reason the `0` in `show` is nessesary. By
the doc's this causes a visible animation of 0s.

--- a/game.html
+++ b/game.html
@@ -23,7 +23,7 @@
 
 </head>
 <body>
-  <div class="container" v-cloak>
+  <div class="container-fluid" v-cloak>
 
     <!-- Header Controls -->
     <div class="header-controls">
@@ -60,7 +60,7 @@
       <!-- Dial -->
       <div
         id="dial-col"
-        class="col-xs-12 col-sm-3 col-md-2 col-md-offset-1"
+        class="col-md-2"
         :data-level="level"
         :data-max-level="maxLevel"
         :data-lives="lives"
@@ -72,7 +72,7 @@
       </div>
 
       <!-- Console -->
-      <div id="console-col" class="col-xs-12 col-sm-9 col-md-8">
+      <div id="console-col" class="col-md-10">
         <div id="console">
           <!-- Factual quotes -->
           <div id="question" v-if="level > 1">
@@ -216,7 +216,7 @@
     <div id="game" class="row">
 
       <!-- Selector -->
-      <div id="wave-selector-col" class="col-xs-12 col-sm-3 col-md-2 col-md-offset-1">
+      <div id="wave-selector-col" class="col-md-2">
         <div class="row">
           <div class="thumb-container col-xs-4 col-sm-12">
             <div id="thumb-signal" class="thumb" @click.stop="display" data-target="wave-signal">
@@ -262,7 +262,7 @@
       </div>
 
       <!-- Player -->
-      <div id="wave-player-col" class="col-xs-12 col-sm-9 col-md-8">
+      <div id="wave-player-col" class="col-md-10">
         <div class="row">
           <div id="wave-player-container" class="col-xs-12">
             <div id="wave-player-container-paddless"> <!-- http://stackoverflow.com/questions/17115344/absolute-positioning-ignoring-padding-of-parent/30826028#30826028 -->
