Rename global nav classes

--- a/game.html
+++ b/game.html
@@ -395,8 +395,8 @@
     <!-- Footer -->
     <div id="footer" class="row">
       <div class="col-xs-12">
-        <div class="header-controls">
-          <div class="home-control">
+        <div class="global-nav">
+          <div class="home">
             <a href="./" target="_self">
               <i class="fa fa-home" aria-hidden="true"></i>
             </a>
