Add localiszed `Home` text to home button

--- a/game.html
+++ b/game.html
@@ -399,6 +399,7 @@
           <div class="home">
             <a href="./" target="_self">
               <i class="fa fa-home" aria-hidden="true"></i>
+              {{homeText}}
             </a>
           </div>
           <div class="loc-sel">
