Move volume @click from middle div to button
It should have always been place on the button, this was a bug.

--- a/game.html
+++ b/game.html
@@ -403,8 +403,8 @@
               {{homeText}}
             </a>
           </div>
-          <div class="middle" @click="toggleVolume">
-            <div class="volume">
+          <div class="middle">
+            <div class="volume" @click="toggleVolume">
               <i
                 :class="{
                   'volume-low': volume==0.2,
