Update start screen title's to BHH

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
     <div id="start-screen">
       <template v-for="(loc, key) in locs">
       <div class="start-item" :data-loc-sel="key" @click="play">
-        <div class="start-title" v-html="loc.index.main['play-now']">
+        <div class="start-title">
+          Black Hole<br>Hunter
         </div>
         <div class="start-name" v-html="loc.index.main.title">
         </div>
