--- a/complete.html
+++ b/complete.html
@@ -91,7 +91,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-<script src='https://unpkg.com/vue/dist/vue.js'></script>
+<script src='https://unpkg.com/vue@2.6.14/dist/vue.min.js'></script>
 <script src="./js/complete.js"></script>
 
 </body>
