--- a/game.html
+++ b/game.html
@@ -444,7 +444,7 @@
 <script src="https://cdn.rawgit.com/Galadirith/wavesurfer.js/9f31c0a279b2c5f133873f97b0ec0f9faffd3395/dist/wavesurfer.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-<script src='https://unpkg.com/vue/dist/vue.js'></script>
+<script src='https://unpkg.com/vue@2.6.14/dist/vue.min.js'></script>
 <script src="./js/game.js"></script>
 
 </body>
